# mythos

./: .clang-format  CMakeLists.txt  readme.md
ares/: CMakeLists.txt  bbox3.h  ccs3.h  concepts.h  cs3.h  curve3d.h  epsilon.h  frustum.h  line.h  matrix.h  plane.h  vec2.h  vec3.h
ares/curve/: curve.h  curve3d.h  line3d.h
hera/: CMakeLists.txt  blend.h  camera.h  color.h  engine.cpp  engine.h  glass_parts.h  image.cpp  image.h  keymap.h  light.h  model.h  renderer.h  solid_parts.h  sysgl.h  texture.h  vertex.h  window.h  world.h
hera/opengl/: enums.h  forge.cpp  forge.h  heragl.h  light_gl.h  model.cpp  model_gl.h  renderer.cpp  texture_gl.h  world.cpp  world.h
hera/opengl/win/: wingl.h
hera/time/: animation.h  scheduler.cpp  scheduler.h  timeline.cpp  timeline.h  timer.h
hera/win/: engine_os.cpp  keymap.cpp  window.cpp  window_impl.cpp  window_impl.h
poc/: CMakeLists.txt  app.cpp  app.h  keymap.cpp  keymap.h  main.cpp  scene.cpp  scene.h  sysgl.h  systemgl.h  window.cpp  window.h
